[gd_scene load_steps=7 format=3 uid="uid://hflpe2gjbrx2"]

[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_ptp66"]
[ext_resource type="Script" path="res://Scripts/Pause.gd" id="1_xtgqx"]
[ext_resource type="Material" uid="uid://vwprmsgn4vg8" path="res://ExcludeCanvas.tres" id="2_ada41"]
[ext_resource type="FontFile" uid="uid://d2naa1ovvhg1t" path="res://monogram.ttf" id="3_ms6lp"]

[sub_resource type="Theme" id="Theme_kown1"]
default_font = ExtResource("3_ms6lp")

[sub_resource type="Theme" id="Theme_jr547"]
default_font = ExtResource("3_ms6lp")

[node name="Pause" type="Node2D"]
process_mode = 3
top_level = true
position = Vector2(-247, -161)
scale = Vector2(1.25, 1.25)
script = ExtResource("1_ptp66")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -127.0
offset_top = -101.0
offset_right = 375.0
offset_bottom = 202.0
scale = Vector2(3.64, 2.76)
color = Color(0, 0, 0, 0.619608)

[node name="Pause" type="VBoxContainer" parent="."]
process_mode = 3
offset_left = 118.0
offset_top = 85.0
offset_right = 174.0
offset_bottom = 176.0
alignment = 1
script = ExtResource("1_xtgqx")

[node name="Start2" type="Label" parent="Pause"]
process_mode = 3
material = ExtResource("2_ada41")
layout_mode = 2
theme = SubResource("Theme_kown1")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
text = "Paused"
horizontal_alignment = 1
uppercase = true

[node name="Start" type="Button" parent="Pause"]
process_mode = 3
material = ExtResource("2_ada41")
layout_mode = 2
theme = SubResource("Theme_kown1")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
action_mode = 0
text = "Continue"

[node name="Options" type="Button" parent="Pause"]
process_mode = 3
material = ExtResource("2_ada41")
layout_mode = 2
theme = SubResource("Theme_kown1")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
action_mode = 0
text = "Options
"

[node name="Exit" type="Button" parent="Pause"]
process_mode = 3
material = ExtResource("2_ada41")
layout_mode = 2
theme = SubResource("Theme_kown1")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
action_mode = 0
text = "Exit"

[node name="OptionsBG" type="ColorRect" parent="."]
visible = false
clip_contents = true
offset_left = 176.0
offset_top = 69.6
offset_right = 288.0
offset_bottom = 188.6
color = Color(0, 0.141176, 0.196078, 1)

[node name="OptionsPane" type="VBoxContainer" parent="OptionsBG"]
offset_left = 2.0
offset_top = 3.2
offset_right = 110.0
offset_bottom = 115.2
theme = SubResource("Theme_jr547")

[node name="MasterVol" type="RichTextLabel" parent="OptionsBG/OptionsPane"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 8
text = " Master Volume
"
fit_content = true
tab_size = 2

[node name="MVol" type="HSlider" parent="OptionsBG/OptionsPane/MasterVol"]
modulate = Color(0, 0.72549, 0.882353, 1)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 3.308
offset_top = 17.0
offset_right = -1.0
offset_bottom = -3.004
focus_neighbor_right = NodePath("../../Fullscreen")
focus_neighbor_bottom = NodePath("../../Fullscreen")
focus_next = NodePath("../../Fullscreen")

[node name="Fullscreen" type="CheckButton" parent="OptionsBG/OptionsPane"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 10.0
focus_neighbor_left = NodePath("../MasterVol/MVol")
focus_neighbor_top = NodePath("../MasterVol/MVol")
focus_neighbor_right = NodePath("../Code")
focus_neighbor_bottom = NodePath("../Code")
focus_next = NodePath("../Code")
focus_previous = NodePath("../MasterVol/MVol")
text = "Fullscreen"

[node name="Code" type="LineEdit" parent="OptionsBG/OptionsPane"]
layout_mode = 2
size_flags_vertical = 10
focus_neighbor_left = NodePath("../Fullscreen")
focus_neighbor_top = NodePath("../Fullscreen")
focus_previous = NodePath("../Fullscreen")
placeholder_text = "Enter Code"
alignment = 1
caret_blink = true

[node name="Back" type="Button" parent="OptionsBG/OptionsPane"]
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Code")
focus_neighbor_top = NodePath("../Code")
focus_neighbor_right = NodePath("../MasterVol/MVol")
focus_neighbor_bottom = NodePath("../MasterVol/MVol")
focus_next = NodePath("../MasterVol/MVol")
focus_previous = NodePath("../Code")
text = "Back"

[connection signal="pressed" from="Pause/Start" to="Pause" method="_on_start_pressed"]
[connection signal="pressed" from="Pause/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause/Exit" to="Pause" method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsBG/OptionsPane/Back" to="." method="_on_back_pressed"]
